--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.alipay.sofa</groupId>
     <artifactId>bolt</artifactId>
-    <version>1.6.11</version>
+    <version>1.6.12-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -83,7 +83,7 @@
         <maven.surefire.argLine></maven.surefire.argLine>
         <maven.surefire.excludes></maven.surefire.excludes>
         <maven.surefire.plugin>2.18.1</maven.surefire.plugin>
-        <netty-io-uring.version>0.0.25.Final</netty-io-uring.version>
+        <netty-io-uring.version>0.0.26.Final</netty-io-uring.version>
         <netty.version>4.1.42.Final</netty.version>
         <project.encoding>UTF-8</project.encoding>
         <slf4j.version>1.7.21</slf4j.version>
