--- a/pom.xml
+++ b/pom.xml
@@ -320,7 +320,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.4</version>
+                <version>3.6.2</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -330,6 +330,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <doclint>none</doclint>
                     <excludePackageNames>com.alipay.hessian.clhm:com.caucho</excludePackageNames>
                     <encoding>${project.encoding}</encoding>
                     <detectOfflineLinks>true</detectOfflineLinks>
